--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension WebDAO.
 
+  * add -u set auth headers for wd_shell.pl
+
 2.15 16 Nov 2014
   * remove session attributes
   * fix wdSessionPar under PSGI
